--- a/Calc/MainWindow.xaml
+++ b/Calc/MainWindow.xaml
@@ -24,30 +24,30 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         
-        <!-- Buttons -->
-        <Button Grid.Row="3" Grid.Column="0" x:Name="btn_7">7</Button>
-        <Button Grid.Row="3" Grid.Column="1" x:Name="btn_8">8</Button>
-        <Button Grid.Row="3" Grid.Column="2" x:Name="btn_9">9</Button>
-        <Button Grid.Row="4" Grid.Column="0" x:Name="btn_4">4</Button>
-        <Button Grid.Row="4" Grid.Column="1" x:Name="btn_5">5</Button>
-        <Button Grid.Row="4" Grid.Column="2" x:Name="btn_6">6</Button>
-        <Button Grid.Row="5" Grid.Column="0" x:Name="btn_1">1</Button>
-        <Button Grid.Row="5" Grid.Column="1" x:Name="btn_2">2</Button>
-        <Button Grid.Row="5" Grid.Column="2" x:Name="btn_3">3</Button>
-        <Button Grid.Row="6" Grid.Column="1" x:Name="btn_0">0</Button>
+        <!-- Buttons numbers -->
+        <Button Grid.Row="3" Grid.Column="0" x:Name="btn_7" Click="btn_num_Click">7</Button>
+        <Button Grid.Row="3" Grid.Column="1" x:Name="btn_8" Click="btn_num_Click">8</Button>
+        <Button Grid.Row="3" Grid.Column="2" x:Name="btn_9" Click="btn_num_Click">9</Button>
+        <Button Grid.Row="4" Grid.Column="0" x:Name="btn_4" Click="btn_num_Click">4</Button>
+        <Button Grid.Row="4" Grid.Column="1" x:Name="btn_5" Click="btn_num_Click">5</Button>
+        <Button Grid.Row="4" Grid.Column="2" x:Name="btn_6" Click="btn_num_Click">6</Button>
+        <Button Grid.Row="5" Grid.Column="0" x:Name="btn_1" Click="btn_num_Click">1</Button>
+        <Button Grid.Row="5" Grid.Column="1" x:Name="btn_2" Click="btn_num_Click">2</Button>
+        <Button Grid.Row="5" Grid.Column="2" x:Name="btn_3" Click="btn_num_Click">3</Button>
+        <Button Grid.Row="6" Grid.Column="1" x:Name="btn_0" Click="btn_num_Click">0</Button>
         
         <!-- Operations -->
 
-        <Button Grid.Row="1" Grid.Column="0" x:Name="btn_min">min</Button>
-        <Button Grid.Row="1" Grid.Column="1" x:Name="btn_max">max</Button>
-        <Button Grid.Row="1" Grid.Column="2" x:Name="btn_avg">avg</Button>
-        <Button Grid.Row="1" Grid.Column="3" x:Name="btn_pow">x^y</Button>
+        <Button Grid.Row="1" Grid.Column="0" x:Name="btn_min" Click="btn_op_Click">min</Button>
+        <Button Grid.Row="1" Grid.Column="1" x:Name="btn_max" Click="btn_op_Click">max</Button>
+        <Button Grid.Row="1" Grid.Column="2" x:Name="btn_avg" Click="btn_op_Click">avg</Button>
+        <Button Grid.Row="1" Grid.Column="3" x:Name="btn_pow" Click="btn_op_Click">x^y</Button>
 
-        <Button Grid.Row="2" Grid.Column="3" x:Name="btn_div">/</Button>
-        <Button Grid.Row="3" Grid.Column="3" x:Name="btn_mult">*</Button>
-        <Button Grid.Row="4" Grid.Column="3" x:Name="btn_minus">-</Button>
-        <Button Grid.Row="5" Grid.Column="3" x:Name="btn_plus">+</Button>
-        <Button Grid.Row="6" Grid.Column="3" x:Name="btn_eq">=</Button>
+        <Button Grid.Row="2" Grid.Column="3" x:Name="btn_div" Click="btn_op_Click">/</Button>
+        <Button Grid.Row="3" Grid.Column="3" x:Name="btn_mult" Click="btn_op_Click">*</Button>
+        <Button Grid.Row="4" Grid.Column="3" x:Name="btn_minus" Click="btn_op_Click">-</Button>
+        <Button Grid.Row="5" Grid.Column="3" x:Name="btn_plus" Click="btn_op_Click">+</Button>
+        <Button Grid.Row="6" Grid.Column="3" x:Name="btn_eq" Click="btn_eq_Click">=</Button>
         
         <Button Grid.Row="6" Grid.Column="2" x:Name="btn_comma">,</Button>
         <Button Grid.Row="6" Grid.Column="0" x:Name="btn_plusminus">+/-</Button>
@@ -59,7 +59,7 @@
         <Button Grid.Row="2" Grid.Column="2" x:Name="btn_backspace" Content="&lt;="></Button>
         
         <!-- Textbox -->
-        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="40">0</TextBox>
+        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="40" x:Name="txtValue">0</TextBox>
 
     </Grid>
 </Window>
