--- a/Calc/MainWindow.xaml
+++ b/Calc/MainWindow.xaml
@@ -49,7 +49,7 @@
         <Button Grid.Row="5" Grid.Column="3" x:Name="btn_plus" Click="btn_op_Click">+</Button>
         <Button Grid.Row="6" Grid.Column="3" x:Name="btn_eq" Click="btn_eq_Click">=</Button>
         
-        <Button Grid.Row="6" Grid.Column="2" x:Name="btn_comma">,</Button>
+        <Button Grid.Row="6" Grid.Column="2" x:Name="btn_comma" Click="btn_comma_Click">,</Button>
         <Button Grid.Row="6" Grid.Column="0" x:Name="btn_plusminus" Click="btn_plusminus_Click">+/-</Button>
         
         <!-- Clear buttons -->
